# project-time-tracker

./: .env  .env_example  .gitignore  LICENSE  README.md  config.json  main.py  pyproject.toml  requirements.txt  run  run.py
app/: __init__.py  alternative_to_onedrive.py  app_state.py  boxplot.py  callback_update.py  callbacks.py  commitment_card_processor.py  extract.py  import.py  import_data.py  layout.py  notusedyet_import.py.bkp  reported_workhours.py
app/assets/: custom-script.js  custom.css  script.js
app/assets/css/: card.css  custom.css  main.css  root.css  selectors.css  tab.css  table.css
app/callbacks/: __init__.py  headers.py  read_excels_bar.py
app/callbacks/cards/: __init__.py  invalid_registers.py  projects.py  team_commitment.py  valid_registers.py
app/languages/: translations.csv  translator.py
app/layout/: __init__.py  layout.py
app/mocks/: mock.py
app/translate/: translations.csv  translator.py
app/utils/: logger.py
assets/: custom.css  script.js
scripts/: app.py  get_data.py  layout.py
